Bug 732687 - Crash [@ nsMsgSendReport::DisplayReport] during compose, save to Drafts folder fails - add some protection about possible bad cases when handling failures. r=irving,a=Standard8 for CLOSED TREE